refactor/backend-go (claim): remove pagination and filter in get all endpoint (#65)
* refactor(claim): remove pagination and filter in get all endpoint

* docs: update swagger & remove unneeded struct
