# backend-go/docs/swagger.yaml
@@ -276,21 +276,6 @@ definitions:
       updated_at:
         type: string
     type: object
-  services.ClaimListResult:
-    properties:
-      claims:
-        items:
-          $ref: '#/definitions/entities.Claim'
-        type: array
-      page:
-        type: integer
-      page_size:
-        type: integer
-      total:
-        type: integer
-      total_pages:
-        type: integer
-    type: object
 host: localhost:8080
 info:
   contact:
@@ -482,20 +467,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieve a list of all claims with optional filtering and pagination
-      parameters:
-      - description: Filter by claim status
-        in: query
-        name: status
-        type: string
-      - description: Page number for pagination
-        in: query
-        name: page
-        type: integer
-      - description: Number of items per page
-        in: query
-        name: limit
-        type: integer
+      description: Retrieve all warranty claims
       produces:
       - application/json
       responses:
@@ -507,7 +479,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/services.ClaimListResult'
+                    $ref: '#/definitions/entities.Claim'
                   type: array
               type: object
         "401":
